--- a/plugin.xml
+++ b/plugin.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="org.devgeeks.privacyscreen" version="0.0.7">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    id="com.peerio.cordova.plugin.privacyscreen"
+    version="1.0.0">
+    <name>Privacy screen plugin (Peerio fork)</name>
+    <description>Secures your app from displaying a screenshot in task switchers under Android and iOS. Keeps sensitive information private.</description>
+    <license>MIT</license>
+    <platform name="android">
+        <config-file parent="/*" target="res/xml/config.xml">
+            <feature name="PrivacyScreenPlugin">
+                <param name="android-package" value="org.devgeeks.privacyscreen.PrivacyScreenPlugin"/>
+                <param name="onload" value="true" />
+            </feature>
+        </config-file>
+        <source-file src="src/android/PrivacyScreenPlugin.java" target-dir="src/org/devgeeks/privacyscreen"/>
+    </platform>
 
-	<name>PrivacyScreenPlugin</name>
-	<description>Secures your app from displaying a screenshot in task switchers under Android and iOS. Keeps sensitive information private.</description>
-	<license>MIT</license>
-
-	<platform name="android">
-
-    <config-file parent="/*" target="res/xml/config.xml">
-      <feature name="PrivacyScreenPlugin">
-        <param name="android-package" value="org.devgeeks.privacyscreen.PrivacyScreenPlugin"/>
-        <param name="onload" value="true" />
-      </feature>
-    </config-file>
-
-		<source-file src="src/android/PrivacyScreenPlugin.java" target-dir="src/org/devgeeks/privacyscreen"/>
-	</platform>
-
-	<platform name="ios">
-
-    <config-file parent="/*" target="config.xml">
-      <feature name="PrivacyScreen">
-        <param name="ios-package" value="PrivacyScreen"/>
-        <param name="onload" value="true" />
-      </feature>
-    </config-file>
-
-		<source-file src="src/ios/PrivacyScreen.h"/>
-		<source-file src="src/ios/PrivacyScreen.m"/>
-		<source-file src="src/ios/FXBlurView.h"/>
-		<source-file src="src/ios/FXBlurView.m"/>
-<framework src="QuartzCore.framework" />
-<framework src="Accelerate.framework" />
-	</platform>
+    <platform name="ios">
+        <config-file parent="/*" target="config.xml">
+            <feature name="PrivacyScreen">
+                <param name="ios-package" value="PrivacyScreen"/>
+                <param name="onload" value="true" />
+            </feature>
+        </config-file>
+        <source-file src="src/ios/PrivacyScreen.h"/>
+        <source-file src="src/ios/PrivacyScreen.m"/>
+        <source-file src="src/ios/FXBlurView.h"/>
+        <source-file src="src/ios/FXBlurView.m"/>
+        <framework src="QuartzCore.framework" />
+        <framework src="Accelerate.framework" />
+    </platform>
 </plugin>
