--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "com.peerio.cordova.plugin.privacyscreen",
-  "version": "1.0.0",
-  "description": "Cordova Camera Plugin",
-  "cordova": {
-    "id": "com.peerio.cordova.plugin.privacyscreen",
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/PeerioTechnologies/peerio-cordova-privacyscreen"
-  },
-  "keywords": [
-    "cordova",
-    "peerio",
-    "privacy",
-    "screen",
-    "ecosystem:cordova",
-    "cordova-android",
-    "cordova-ios"
-  ],
-  "contributors": [
-      {
-          "name": "Samvel Avanesov",
-          "email": "seavan@gmail.com"
-      }
-  ],
-  "license": "MIT"
+    "name": "com.peerio.cordova.plugin.privacyscreen",
+    "version": "1.0.2",
+    "description": "Cordova Camera Plugin",
+    "cordova": {
+        "id": "com.peerio.cordova.plugin.privacyscreen",
+        "platforms": [
+            "android",
+            "ios"
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/PeerioTechnologies/peerio-cordova-privacyscreen"
+    },
+    "forked": {
+        "type": "git",
+        "url": "https://github.com/jeroentrappers/PrivacyScreen",
+        "version": "0.0.7"
+    },
+    "keywords": [
+        "cordova",
+        "peerio",
+        "privacy",
+        "screen",
+        "ecosystem:cordova",
+        "cordova-android",
+        "cordova-ios"
+    ],
+    "contributors": [
+        {
+            "name": "Samvel Avanesov",
+            "email": "seavan@gmail.com"
+        }
+    ],
+    "license": "MIT"
 }
